# doc/openapi.yaml
@@ -14,7 +14,7 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-  - url: https://frequency-80-cafe-administracao.onrender.com/
+  - url: http://localhost:8080/
 tags:
   - name: "Administração (Admin)"
     description: "Endpoints restritos (admin) para gerenciamento do sistema"
@@ -36,6 +36,8 @@ paths:
     post:
       tags:
         - Administração (Admin)
+      security:
+        - bearerAuth: []
       summary: Adiciona um novo admin
       description: Endpoint para enviar os dados do admin a serem cadastrados
       requestBody:
@@ -809,7 +811,6 @@ components:
       required:
         - login
         - senha
-        - jwt
       type: object
       properties:
         login:
@@ -822,10 +823,6 @@ components:
           description: O número máximo de caracteres é de 100
           maxLength: 100
           minLength: 8
-        jwt:
-          type: string
-          description: O número máximo de caracteres é de 255
-          maxLength: 255
     # SCHEMAS PARA OS GETS
     AdminGet:
       required:
@@ -857,6 +854,28 @@ components:
         categoria:
           type: string
           maxLength: 45
+        produto:
+          type: array
+          items:
+            type: object
+            properties:
+                id:
+                  type: integer
+                  minimum: 1
+                nome:
+                  type: string
+                  maxLength: 100
+                descricao:
+                  type: string
+                preco:
+                  type: number
+                  format: double
+                  minimum: 0
+                  maximum: 999.99
+                imagem:
+                  type: array
+                  items:
+                    $ref: "#/components/schemas/ImagemGet"
     ImagemGet:
       required:
         - id
@@ -896,4 +915,12 @@ components:
         categoria:
           type: array
           items:
-            $ref: "#/components/schemas/CategoriaGet"
+            type: object
+            properties:
+              id:
+                type: integer
+                minimum: 1
+              categoria:
+                type: string
+                description: O número máximo de caracteres é de 45
+                maxLength: 45
